WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
13403
REGRESSION (
r18875
-
r18899
): Can no longer type into search form field after searching and then clicking "back"
https://bugs.webkit.org/show_bug.cgi?id=13403
Summary
REGRESSION (r18875-r18899): Can no longer type into search form field after s...
David Glover
Reported
2007-04-19 07:13:53 PDT
1. Go to
http://www.apple.com/downloads/macosx/
2. Type something into the search box in the top left and press Return. (I searched for "rss".) 3. Click the Back button. 4. Try to edit the contents of the search box. Result: You can delete characters, but you can't type new characters. This is not reproduced in 419.3.
Attachments
Patch
(2.21 KB, patch)
2007-04-19 12:40 PDT
,
mitz
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2007-04-19 10:18:34 PDT
David, "419.x" is the release version of Safari, and "522+" is all recent WebKit nightlies. Could you give us more information such as which WebKit nightly you were using when you saw that it was broken? Also it is often valuable to download some of the older WebKit nightlies to discover when this broke. Thanks!
David Glover
Comment 2
2007-04-19 10:24:35 PDT
I was using today's (April 19 2007) nightly.
Darin Adler
Comment 3
2007-04-19 10:25:45 PDT
This is specific to this particular page, and doesn't happen on other pages. I'm pretty sure it's due to some JavaScript on the page that's trapping the key down events.
mitz
Comment 4
2007-04-19 10:29:34 PDT
(In reply to
comment #3
)
> This is specific to this particular page, and doesn't happen on other pages. > > I'm pretty sure it's due to some JavaScript on the page that's trapping the key > down events. >
I'm seeing some painting artifacts when I type in the field after back navigation, so I think it's more than that.
mitz
Comment 5
2007-04-19 10:37:11 PDT
Regressed between
r18875
and
r18899
. My suspect is <
http://trac.webkit.org/projects/webkit/changeset/18877
>.
mitz
Comment 6
2007-04-19 12:40:55 PDT
Created
attachment 14093
[details]
Patch I don't know how to make a layout test for this bug.
Darin Adler
Comment 7
2007-04-19 18:50:22 PDT
Comment on
attachment 14093
[details]
Patch r=me
Mark Rowe (bdash)
Comment 8
2007-04-19 19:28:48 PDT
Landed in
r20964
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug